--- a/demande_paiement.html
+++ b/demande_paiement.html
@@ -9,6 +9,7 @@
 Payer?
 <input type="button" value="oui" id="oui">
 <input type="button" value="non" id="non">
+<input type="image" id="img">
 <script>
     document.getElementById("oui").addEventListener("click", function(){
         nouveau_produit = localStorage.getItem("achat")
