--- a/stock.html
+++ b/stock.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="menu.css" />
 
 </head>
-<body style="    background-image: url('./image/fond_boulangerie.png');
+<body style="    background-image: url('./image/fond_boulangerie.png') ; background-size: cover;
 ">
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
