ajout produits : porte, fenetre, fenetre_droite

--- a/caisse.html
+++ b/caisse.html
@@ -42,6 +42,9 @@ window.onclick = function(event) {
     }
 }</script>
 <div id="deco">
+    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; top: 8em; left: 25em; width: 10em; height: 18em">
+    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute; top: 8em; left: 40em; width: 15em; height: 9em">
+    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute; top: 5em; right: 5em; width: 12em; height: 15em">
     <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
     <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
     <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
@@ -424,7 +427,7 @@ else {
 </script>
 
 <script>
-    //DECO
+    // DECO
     if (localStorage.getItem("liste_biens").length == 0){
 
     }
