--- a/magasin.html
+++ b/magasin.html
@@ -43,15 +43,19 @@
 
 <!--FIN MENU-->
 <table style="background-color: chocolate; text-align: center; font-size: 2em; display: inline-block;">
+
+    <tr>
+        <td><input type="image" src="image/magasin/porte.png" style="width: 10em" alt="porte" id="porte" value="5" onclick="quest('porte')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/fenetre.png" style="width: 10em" alt="fenetre" id="fenetre" value="5" onclick="quest('fenetre')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/fenetre_droite.png" style="width: 10em " alt="fenetre_droite" id="fenetre_droite" value="10" onclick="quest('fenetre_droite')"><br>10 pièces</td>
+    </tr>
     <tr>
         <td><input type="image" src="image/magasin/etoile.png" style="width: 10em" alt="etoile" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/fleur.png" style="width: 10em" alt="fleur" id="fleur" value="5" onclick="quest('fleur')"><br>5 pièces</td>
-    </tr>
-    <tr>
         <td><input type="image" src="image/magasin/cercle.png" style="width: 10em " alt="cercle" id="cercle" value="10" onclick="quest('cercle')"><br>10 pièces</td>
-        <td><input type="image" src="image/magasin/mandala.png" style="width: 10em" alt="mandala" id="mandala" value="10" onclick="quest('mandala')"><br>10 pièces</td>
     </tr>
     <tr>
+        <td><input type="image" src="image/magasin/mandala.png" style="width: 10em" alt="mandala" id="mandala" value="10" onclick="quest('mandala')"><br>10 pièces</td>
         <td><input type="image" src="image/magasin/rosace.png" style="width: 10em" alt="rosace" id="rosace" value="15" onclick="quest('rosace')"><br>15 pièces</td>
         <td><input type="image" src="image/magasin/spirale.png" style="width: 10em" alt="spirale" id="spirale" value="15" onclick="quest('spirale')"><br>15 pièces</td>
     </tr>
