--- a/demande_paiement.html
+++ b/demande_paiement.html
@@ -10,6 +10,9 @@ Payer?
 <input type="button" value="oui" id="oui">
 <input type="button" value="non" id="non">
 <div id="deco">
+    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; top: 8em; left: 25em; width: 10em; height: 18em">
+    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute; top: 8em; left: 40em; width: 15em; height: 9em">
+    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute; top: 5em; right: 5em; width: 12em; height: 15em">
     <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
     <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
     <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
