--- a/magasin.html
+++ b/magasin.html
@@ -48,6 +48,8 @@
         <td><input type="image" src="image/magasin/porte.png" style="width: 10em" alt="porte" id="porte" value="5" onclick="quest('porte')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/fenetre.png" style="width: 10em" alt="fenetre" id="fenetre" value="5" onclick="quest('fenetre')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/fenetre_droite.png" style="width: 10em " alt="fenetre_droite" id="fenetre_droite" value="10" onclick="quest('fenetre_droite')"><br>10 pièces</td>
+        <td><input type="image" src="image/magasin/table_salon.png" style="width: 10em " alt="table_salon" id="table_salon" value="10" onclick="quest('table_salon')"><br>10 pièces</td>
+
     </tr>
     <tr>
         <td><input type="image" src="image/magasin/etoile.png" style="width: 10em" alt="etoile" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
