historique des calculs
chaque nouveau résultat est stocké, pour ne pas demander un nouveau calcul avec le même résultat que précédemment

--- a/creerPartie.html
+++ b/creerPartie.html
@@ -51,7 +51,7 @@
             localStorage.setItem(key_tentative, val_tentative);
             localStorage.setItem(key_piece, val_piece);
             localStorage.setItem("liste_biens", []);
-
+            localStorage.setItem("liste_calculs_deja_poses", []);
             location.reload();
         }
 
