mettre le curseur directement dans input texte pour écrire le résultat

--- a/caisse.html
+++ b/caisse.html
@@ -8,7 +8,9 @@
 
 
 </head>
-<body style="background-image: url('image/fondfinal.png'); background-size: cover">
+<!--https://openclassrooms.com/forum/sujet/input-placer-le-curseur-automatiquement-dedans-80024-->
+<body onload="document.getElementById('resultat').focus()" style="background-image: url('image/fondfinal.png'); background-size: cover">
+
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="myFunction()" class="dropbtn" style="background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em; color: #555555">MENU</button>
     <div id="myDropdown" class="dropdown-content">
